--- a/src/App.css
+++ b/src/App.css
@@ -44,5 +44,5 @@
 /* In App.css or index.css */
 
 body {
-  background-color: #89b596; /* Use your preferred color code or name */
+  background-color: #89b596; 
 }
